# pyopt_driver

./: MANIFEST.in  README.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  pkgdocs.rst  srcdocs.rst  usage.rst
src/pyopt_driver/: pyopt_driver.py
src/pyopt_driver/test/: CONMIN.out  test_pyopt_driver.py
