[metadata]
name = pyopt_driver
version = 0.3
summary = Driver wrapper for pyOpt
description-file = README.txt
keywords = openmdao
home-page = https://github.com/OpenMDAO/pyOpt-Driver
download-url = 
author = Kenneth T. Moore
author-email = kenneth-t-mooore-1@nasa.gov
maintainer = 
maintainer-email = 
license = 
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<2.7
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

